--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               vizElement.parentNode.insertBefore(scriptElement, vizElement);
             </script> -->
             <div class="embed">
-              <iframe src="https://public.tableau.com/views/msrp-generic/Dashboard1?:showVizHome=no&:embed=true"width="645" height="955">
+              <iframe src="https://public.tableau.com/views/msrp-generic-v2/Dashboard1?:showVizHome=no&:embed=true#1">
               </iframe>
              </div>
           </div>
