--- a/index.html
+++ b/index.html
@@ -245,15 +245,15 @@
               vizElement.parentNode.insertBefore(scriptElement, vizElement);
             </script> -->
             <div class="embed">
-              <iframe src="https://public.tableau.com/views/msrp-generic-v2/Dashboard1?:showVizHome=no&:embed=true#1">
+              <iframe src="https://public.tableau.com/views/msrp-generic-v2/Dashboard1?:showVizHome=no&:embed=true#">
               </iframe>
-             </div>
+            </div>
           </div>
           <!-- .end .wrap -->
         </section>
         <section>
           <div class="wrap">
-            <div class="card-70 bg-white tableauPlaceholder"
+            <!-- <div class="card-70 bg-white tableauPlaceholder"
               id="viz1601787866122"
               style="position: relative"
             >
@@ -292,8 +292,12 @@
               scriptElement.src =
                 "https://public.tableau.com/javascripts/api/viz_v1.js";
               vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
+            </script> -->
             <!-- end .card-50-->
+            <div class="embed">
+              <iframe src="https://public.tableau.com/views/msrp-funding-v2/Dashboard1?:showVizHome=no&:embed=true#">
+              </iframe>
+            </div>
           </div>
           <!-- .end .wrap -->
         </section>
