--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </section>
         <section>
           <div class="wrap">
-            <div
+            <!-- <div
               class="tableauPlaceholder"
               id="viz1603987698995"
               style="position: relative"
@@ -344,8 +344,12 @@
               scriptElement.src =
                 "https://public.tableau.com/javascripts/api/viz_v1.js";
               vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
+            </script> -->
             <!-- end .card-50-->
+            <div class="embed">
+              <iframe src="https://public.tableau.com/views/Agency-activitiesMSRP-v3/Dashboard1?:showVizHome=no&:embed=true#">
+              </iframe>
+            </div>
           </div>
           <!-- .end .wrap -->
         </section>
